[gd_scene load_steps=8 format=3 uid="uid://1epgxbsehhgf"]

[ext_resource type="Script" path="res://scenes/debug_world.gd" id="1_lkw13"]
[ext_resource type="Texture2D" uid="uid://dcrj3ctvhd1sv" path="res://addons/kenney_prototype_textures/dark/texture_01.png" id="2_fvg1q"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_hoy76"]
sky_top_color = Color(0.185457, 0.0194907, 0.285226, 1)
sky_horizon_color = Color(0.905941, 0.563641, 0.207522, 1)
ground_bottom_color = Color(0.6794, 0.390948, 0.176608, 1)
ground_horizon_color = Color(0.905882, 0.564706, 0.207843, 1)
ground_curve = 0.098492

[sub_resource type="Sky" id="Sky_rqers"]
sky_material = SubResource("ProceduralSkyMaterial_hoy76")

[sub_resource type="Environment" id="Environment_vqbcu"]
background_mode = 2
sky = SubResource("Sky_rqers")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0ywp2"]
albedo_texture = ExtResource("2_fvg1q")
metallic_specular = 0.0
roughness = 0.95
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_stq3c"]
material = SubResource("StandardMaterial3D_0ywp2")
size = Vector2(50, 50)

[node name="DebugWorld" type="Node3D"]
script = ExtResource("1_lkw13")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vqbcu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.943801, 0.116289, -0.309381, 0, 0.93606, 0.351842, 0.330514, 0.332069, -0.883454, 0, 0, 0)
light_color = Color(1, 0.620017, 0.325408, 1)
light_energy = 2.0
shadow_enabled = true

[node name="PlaneMesh" type="CSGMesh3D" parent="."]
use_collision = true
mesh = SubResource("PlaneMesh_stq3c")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 640.0
offset_top = 123.0
offset_right = -640.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Server Address"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
